--- a/public/text.html
+++ b/public/text.html
@@ -9,7 +9,7 @@
     <meta content="text/javascript" http-equiv="Content-Script-Type" />
     <title>HTMLのインデントを綺麗にするサービス - Ham Cutlet</title>
 
-    <link href="stylesheets/test.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/style.css" rel="stylesheet" type="text/css" />
     <link href="/favicon.ico" rel="shortcut icon" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
     <script src="/javascript/jquery.updnWatermark.js" type="text/javascript"></script>
